k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splitbot
  namespace: splitbot
  labels:
    app.kubernetes.io/name: splitbot
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: splitbot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: splitbot
    spec:
      containers:
        - name: splitbot
          image: ghcr.io/erix/splitbot:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 500m
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: splitbot-data
